[package]
name = "silent-crdt"
version = "0.1.0"
edition = "2024"

[dependencies]
silent = { path = "./silent/silent", features = ["static"] }
scru128 = "3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
sled = "0.34"
reqwest = { version = "0.12", features = ["json"] }
clap = { version = "4.0", features = ["derive"] }
async-trait = "0.1"
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
tempfile = "3.0"
