[package]
name = "silent-crdt"
version = "0.1.0"
edition = "2024"

[lib]
name = "silent_crdt"
path = "src/lib.rs"

[[bin]]
name = "silent-crdt"
path = "src/main.rs"

[dependencies]
silent = { path = "./silent/silent", features = ["static"] }
scru128 = "3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
sled = "0.34"
reqwest = { version = "0.12", features = ["json"] }
clap = { version = "4.0", features = ["derive"] }
async-trait = "0.1"
sha2 = "0.10"
hex = "0.4"
jsonwebtoken = "9.0"
ed25519-dalek = { version = "2.0", features = ["serde"] }
rand = "0.8"
base64 = "0.22"
tonic = "0.12"
prost = "0.13"

[build-dependencies]
tonic-build = "0.12"

[dev-dependencies]
tempfile = "3.0"
